test/spec_vectors/try_table/fail/module_14.wat
(module (type $t (func)) (tag $e (param (ref null $t))) (func (export "catch") (result (ref $t)) (block $l (result (ref $t)) (try_table (catch $e $l)) (unreachable))))